--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,12 @@
     <name>spock-karate-example</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>11</java.version>
-        <spock.version>2.0-M2-groovy-2.5</spock.version>
-        <groovy.version>2.5.10</groovy.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <spock.version>2.0-M5-groovy-2.5</spock.version>
+        <groovy.version>2.5.14</groovy.version>
         <karate.version>0.9.5</karate.version>
     </properties>
     <dependencies>
